Add param to yaml definition

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,10 @@ parameters:
   type: string
 - name: model_version
   type: string
+- name: databricks_host
+  type: string
+- name: databricks_token
+  type: string
 
 trigger:
 - none
