--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,10 +57,10 @@ steps:
     Dockerfile: '**/Dockerfile'
     
 # Configure the settings for Docker task below to connect to your own Docker Registry or Azure Container Registry
-# - task: Docker@2
-#   displayName: 'Push Docker Image to ACR'
-#   inputs:
-#     containerRegistry: 'solacc'
-#     repository: 'edge-ml-for-manufacturing'
-#     command: 'push'
-#     tags: v.${{ parameters.model_version }}
+- task: Docker@2
+  displayName: 'Push Docker Image to Docker Registry'
+  inputs:
+    containerRegistry: 'dbbnicole'
+    repository: 'edge-ml-for-manufacturing'
+    command: 'push'
+    tags: v.${{ parameters.model_version }}
