--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'dbbnicole'
+    containerRegistry: 'edge-ml-docker-registry'
     repository: 'edge-ml-for-manufacturing'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
@@ -60,7 +60,7 @@ steps:
 - task: Docker@2
   displayName: 'Push Docker Image to Docker Registry'
   inputs:
-    containerRegistry: 'dbbnicole'
+    containerRegistry: 'edge-ml-docker-registry'
     repository: 'edge-ml-for-manufacturing'
     command: 'push'
     tags: v.${{ parameters.model_version }}
