--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'solacc_acr'
-    repository: 'ml_model'
+    repository: 'ml-model'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     
